style: Correcoes de impressao e texto

--- a/index.html
+++ b/index.html
@@ -38,34 +38,34 @@
             <hr>
 
             <div class="row">
-                <div class="form-group col-md-4 col-sm-12">
+                <div class="form-group col-lg-4 col-sm-12">
                     <label for="name">Nome</label>
-                    <input class="form-control form-control-sm"  type="text" id="name" autocomplete="none">
+                    <input class="form-control form-control-sm" type="text" id="name" autocomplete="none">
                 </div>
-                <div class="form-group col-md-2 col-sm-12">
+                <div class="form-group col-lg-2 col-sm-12">
                     <label for="date-exam">Data do Exame</label>
-                    <input class="form-control form-control-sm"  type="date" id="date-exam">
+                    <input class="form-control form-control-sm" type="date" id="date-exam">
                 </div>
-                <div class="form-group col-md-3 col-sm-12">
+                <div class="form-group col-lg-3 col-sm-12">
                     <label for="date-birth">Data Nasc.</label>
                     <input class="form-control form-control-sm" type="date" id="date-birth">
                 </div>
-                <div class="form-group col-md-2 col-sm-12">
+                <div class="form-group col-lg-2 col-sm-12">
                     <label for="age">Idade</label>
                     <input class="form-control form-control-sm" disabled id="age">
                 </div>
-                <div class="form-group col-md-2 col-sm-12">
+                <div class="form-group col-lg-2 col-sm-12">
                     <label for="gender">Gênero</label>
                     <select class="form-select form-select-sm" id="gender">
                         <option value="M">Masculino</option>
                         <option value="F">Feminino</option>
                     </select>
                 </div>
-                <div class="form-group col-md-4 col-sm-12">
+                <div class="form-group col-lg-6 col-sm-12">
                     <label for="mother">Mãe</label>
                     <input class="form-control form-control-sm" type="text" id="mother">
                 </div>
-                <div class="form-group col-md-4 col-sm-12">
+                <div class="form-group col-lg-6 col-sm-12">
                     <label for="exam-place">Local da Realização do Exame</label>
                     <input class="form-control form-control-sm" type="text" id="exam-place">
                 </div>
@@ -80,7 +80,8 @@
 
                     <div class="d-flex">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="historic" id="historic-0" value="0" checked>
+                            <input class="form-check-input" type="radio" name="historic" id="historic-0" value="0"
+                                checked>
                             <label class="form-check-label" for="historic-0">Não</label>
                         </div>
 
@@ -160,7 +161,8 @@
             <h3 class="mb-3">Como fazer o teste da linguinha</h3>
             <p>
                 O teste da línguinha deve ser realizado por um profissional da área da saúde
-                qualificado, como por exemplo, o médico pediatra, médico otorrino, cirurgião dentista ou o fonaudiólogo. Ele deve elevar a língua do bebê
+                qualificado, como por exemplo, o médico pediatra, médico otorrino, cirurgião dentista ou o fonaudiólogo.
+                Ele deve elevar a língua do bebê
                 para verificar se a língua está presa, e também observar o bebê chorando e sugando.
                 O exame não tem contraindicações. <br>
                 Recomenda-se que a avaliação do frênulo da língua seja inicialmente realizada na maternidade.
@@ -202,7 +204,7 @@
 
             <h3 class="mb-3">1. Postura de lábio em repouso</h3>
             <div class="row">
-                <div class="col-md-9">
+                <div class="col">
                     <div class="images-references">
                         <div class="item">
                             <label for="img-1-1"><img src="img/1/1.png" alt=""></label>
@@ -227,7 +229,7 @@
 
             <h3 class="mb-3">2. Tendência do posicionamento da língua durante o choro</h3>
             <div class="row">
-                <div class="col-md-9">
+                <div class="col">
                     <div class="images-references">
                         <div class="item">
                             <label for="img-2-1"><img src="img/2/1.png" alt=""></label>
@@ -256,10 +258,12 @@
             </div>
 
             <hr>
+        </div>
 
+        <div class="page">
             <h3 class="mb-3">3. Forma da ponta da língua quando elevada durante o choro ou manobra de elevação</h3>
             <div class="row">
-                <div class="col-md-9">
+                <div class="col">
                     <div class="images-references">
                         <div class="item">
                             <label for="img-3-1"><img src="img/3/1.png" alt=""></label>
@@ -284,7 +288,7 @@
 
             <h3 class="mb-3">4. Frênulo da Língua</h3>
             <div class="row">
-                <div class="col-md-9">
+                <div class="col">
                     <div class="images-references">
                         <div class="item">
                             <label for="img-4-1"><img src="img/4/1.png" alt=""></label>
@@ -311,7 +315,7 @@
 
             <h3 class="mb-3">4.1 Espessura do Frênulo</h3>
             <div class="row">
-                <div class="col-md-9">
+                <div class="col">
                     <div class="images-references">
                         <div class="item">
                             <label for="img-4-1-1"><img src="img/4-1/1.png" alt=""></label>
@@ -325,15 +329,13 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-3"></div>
             </div>
 
             <hr>
 
             <h3 class="mb-3">4.2 Fixação do frênulo na face sublingual</h3>
             <div class="row">
-                <div class="col-md-9">
+                <div class="col">
                     <div class="images-references">
                         <div class="item">
                             <label for="img-4-2-1"><img src="img/4-2/1.png" alt=""></label>
@@ -352,15 +354,13 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-3"></div>
             </div>
 
             <hr>
 
             <h3 class="mb-3">4.3 Fixação do frênulo no assoalho da boca</h3>
             <div class="row">
-                <div class="col-md-9">
+                <div class="col">
                     <div class="images-references">
                         <div class="item">
                             <label for="img-4-3-1"><img src="img/4-3/1.png" alt=""></label>
@@ -376,8 +376,6 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-3"></div>
             </div>
 
             <hr>
